fix small typo in header

--- a/eda-and-visualization/radar_charts.ipynb
+++ b/eda-and-visualization/radar_charts.ipynb
@@ -870,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Functionalizing Chart Radar Chart Creation\n",
+    "## Functionalizing Radar Chart Creation\n",
     "\n",
     "Lastly, I wanted to show a simple example of how you could easily functionalize this whole process by creating a function that takes in two row numbers (good approximate for overall rank), and returns a comparison plot of the two schools with those ranks."
    ]
