fixing typos in prophet vignette + timestamp in multiple vignettes

--- a/utilities/html_file_appender_bs4.ipynb
+++ b/utilities/html_file_appender_bs4.ipynb
@@ -24,14 +24,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This notebook was late run:  2019-03-31 16:58:26.882320\n"
+      "This notebook was last run:  2019-04-01 23:27:09.837726\n"
      ]
     }
    ],
    "source": [
     "import datetime\n",
     "# prints the present date and time as a form of log\n",
-    "print(\"This notebook was late run: \", datetime.datetime.now())"
+    "print(\"This notebook was last run: \", datetime.datetime.now())"
    ]
   },
   {
