--- a/eda-and-visualization/eda_and_visualization.ipynb
+++ b/eda-and-visualization/eda_and_visualization.ipynb
@@ -42,14 +42,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This notebook was late run:  2019-03-31 16:54:26.166449\n"
+      "This notebook was last run:  2019-04-01 23:27:39.593951\n"
      ]
     }
    ],
    "source": [
     "import datetime\n",
     "# prints the present date and time as a form of log\n",
-    "print(\"This notebook was late run: \", datetime.datetime.now())"
+    "print(\"This notebook was last run: \", datetime.datetime.now())"
    ]
   },
   {
