--- a/conferences/pycon_2019/bayesian-stats-modelling-tutorial-master/notebooks/06-instructor-hierarchical-baseball.ipynb
+++ b/conferences/pycon_2019/bayesian-stats-modelling-tutorial-master/notebooks/06-instructor-hierarchical-baseball.ipynb
@@ -384,9 +384,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bayesian-modelling-tutorial",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "bayesian-modelling-tutorial"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -398,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
