finalizing notes from model interpretability workshop

--- a/conferences/pycon_2019/model-interpretability-tutorial-master/03-interpretability_SHAP-solution.ipynb
+++ b/conferences/pycon_2019/model-interpretability-tutorial-master/03-interpretability_SHAP-solution.ipynb
@@ -10,7 +10,8 @@
     "\n",
     "- SHAP is quite good at looking at marginal contributions, as opposed to Eli5 which only shuffles one value at a time and holds all others constant; hence, SHAP is better than Eli5 at looking at marginal contributions.\n",
     "    - For example, if I had three features in a model--age, education, job--SHAP would try deactivating all possible combinations of variables to look into importance, whereas Eli5 woudld only shuffle the values for one variable at a time. \n",
-    "    - SHAP \"deactivates\" variables by setting that variable in the model to its average value in the given training data. For categorical data, it selects the most prevalent class. "
+    "    - SHAP \"deactivates\" variables by setting that variable in the model to its average value in the given training data. For categorical data, it selects the most prevalent class. \n",
+    "- Best to not use the default kernel SHAP functions because they are very slow, but luckily there are fast functions for most model types that we care about (even deep learning methods). "
    ]
   },
   {
