--- a/eda-and-visualization/eda_and_visualization.Rmd
+++ b/eda-and-visualization/eda_and_visualization.Rmd
@@ -16,7 +16,7 @@ The purpose of this document is to serve as a smorgasbord of EDA techniques and 
 
 ```{r setup, echo = F}
 # setting the appropriate working directory
-knitr::opts_knit$set(root.dir = '~/Desktop/personal/personal_code/data-science-toolkit/')
+knitr::opts_knit$set(root.dir = '~/Desktop/personal/personal_code/on_github/data-science-toolkit/')
 ```
 
 ```{r results='hide', warning=FALSE, message=FALSE}
@@ -32,6 +32,8 @@ library(DataExplorer) # allows for creation of missing values map
 library(RCurl) # Provides functions to allow one to compose general HTTP requests, etc. in R
 library(broom) # for tidy modeling and displaying of model / test results 
 library(ggthemes) # for more custom ggplot themes
+library(inspectdf) # for df and column EDA convenience functions
+library(xaringan) # for imr Rmd preview while editing
 # if I reference functions that are more niche, I will call them explicitly in-line as well
 ```
 
@@ -52,6 +54,30 @@ glimpse(base_df)
 ```
 
 ## Exploring and Cleaning the Data
+
+### Exploring Your DFs w/ the [Inspectdf Package](https://github.com/alastairrushworth/inspectdf)
+
+```{r}
+# exploring the memory utilization of a single df
+inspectdf::inspect_mem(base_df, show_plot = TRUE)
+```
+
+```{r}
+# looking into where the NULLs are in the df
+# note: this works for multiple DFs as well
+inspectdf::inspect_na(base_df, show_plot = TRUE)
+```
+
+```{r}
+# inspecting the categorical levels in the df
+inspectdf::inspect_cat(base_df, show_plot = TRUE)
+```
+
+```{r}
+# inspecting the correlations in our df
+inspectdf::inspect_cor(base_df, show_plot = TRUE)
+```
+
 
 ### Dealing with NULLs 
 
