testing scatterplot again

--- a/eda-and-visualization/viz_with_plotly.ipynb
+++ b/eda-and-visualization/viz_with_plotly.ipynb
@@ -9320,8 +9320,12 @@
    ],
    "source": [
     "# quick test of plotly express\n",
+    "\n",
+    "# make a much smaller sub-sampled df for test viz\n",
+    "test_viz_df = acq_2017_df.sample(frac=0.001)\n",
+    "\n",
     "px.scatter(\n",
-    "    data_frame=acq_2017_df.sample(frac=0.001), \n",
+    "    data_frame=test_viz_df, \n",
     "    x='dti', \n",
     "    y='cscore_min', \n",
     "    color='purpose',\n",
