calling out how to add value labels to nodes in comments

--- a/eda-and-visualization/sankey_charts.ipynb
+++ b/eda-and-visualization/sankey_charts.ipynb
@@ -1544,6 +1544,10 @@
     "    # specify the thype of figure we want -- sankey\n",
     "    type = 'sankey',\n",
     "    # defining all info / aesthetics regarding the nodes (aka bars / rectangles in the sankey)\n",
+    "    # note: I made the choice to NOT show value and category name for each node-label...\n",
+    "    # I did this to minimize the business in the chart, but if you want both, you would...\n",
+    "    # need to change the \"label\" parameter below to point at a column concatenating both...\n",
+    "    # the value and name, i.e. label =  label_list_hypotheticaldf['val_and_label_concat']\n",
     "    node = dict(\n",
     "        # how much padding between the nodes\n",
     "        pad = 15,\n",
